# four

./: .clang-format  CMakeLists.txt  Makefile  README.md  TODO.md
data/: 120cell.mesh4  5cell.mesh4  600cell.mesh4  cell-frag.glsl  fragment-selected-cell.glsl  fragment.glsl  fragment_line.glsl  n4d-vert.glsl  tesseract.mesh4  vertex.glsl  vertex_line.glsl  wireframe-frag.glsl  xz-grid-frag.glsl  xz-grid-vert.glsl
data/meshes/: 120-cell.mesh4  120cell.mesh4  16-cell.mesh4  16cell.mesh4  24-cell.mesh4  24cell.mesh4  5-cell.mesh4  600-cell.mesh4  Tesseract.mesh4  tesseract.mesh4
data/shaders/: common-frag.glsl  cross-frag.glsl  cross-vert.glsl  cross.frag  cross.vert  divider-frag.glsl  divider-vert.glsl  divider.frag  divider.vert  n4d-frag.glsl  n4d-vert.glsl  n4d.frag  n4d.vert  xz-grid-frag.glsl  xz-grid-vert.glsl  xz-grid.vert
depends/Handmade-Math/: HandmadeMath.h
depends/glad/include/glad/: glad.h
depends/glad/src/: glad.c
depends/imgui/: imgui_impl_sdl.h
depends/libigl/include/igl/copyleft/tetgen/: tetrahedralize.cpp
depends/loguru/: loguru.cpp
depends/triangle/: triangle.h
src/: main.cpp
src/four/: app_state.cpp  app_state.hpp  generate.cpp  generate.hpp  math.cpp  math.hpp  mesh.cpp  mesh.hpp  render.cpp  render.hpp  render_funcs.cpp  resource.cpp  resource.hpp  triangulate.cpp  triangulate.hpp  utility.cpp  utility.hpp
